@@ -2,6 +2,7 @@ iRedMail-0.9.0:
     * Improvement:
         - Nginx support is now available on all Linux/BSD distributions.
         - MariaDB support is now available on FreeBSD.
+        - Use 'bcrypt' as default password scheme on FreeBSD.
         - Enable '@lookup_sql_dsn' in Amavisd by default, used for per-user,
           per-domain and global per-recipient policy, including per-recipient
           white/blacklist, spam policy.
